crates/conduit-derive/tests/compile_fail/command_generic_fn.rs
use conduit_derive::command;

#[command]
fn generic_handler<T: ToString>(val: T) -> Vec<u8> {
    val.to_string().into_bytes()
}

fn main() {}
