crates/conduit-derive/tests/compile_fail/command_generic_fn.stderr
error: #[command] cannot be used on generic functions
 --> tests/compile_fail/command_generic_fn.rs:4:19
  |
4 | fn generic_handler<T: ToString>(val: T) -> Vec<u8> {
  |                   ^^^^^^^^^^^^^
